fixed alignment of text in play card

--- a/pages/css/home.css
+++ b/pages/css/home.css
@@ -202,6 +202,14 @@ a .btn,
   box-shadow: 0px 8px 0px #1d1d1d;
 }
 
+span.game-chance.icon-label {
+  color: #fff;
+}
+
+span.game-hint {
+  text-align: center;
+}
+
 @media screen and (min-width: 1100px) {
   main {
     border: unset;
